--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background: lightblue;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    background-color: darkblue;
+    height: 100px;
+    padding: 10px;
+    color: white;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .App-title {
+    font-size: 2em;
   }
-}
+  
+  .App-intro {
+    font-size: large;
+  }
